<resources>
    <string name="app_name">DLNU Assistant</string>
    <string name="title_home">Home</string>
    <string name="title_table">Time Table</string>
    <string name="title_center">Center</string>
    <string name="has_update">Latest version is available,please download or go to GitHub for updates.</string>
    <string name="download_newversion">Download</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="goto_github">Open URL</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="developer">Developer</string>
    <string name="update_check">Update Check</string>
    <string name="update_checking">Update checking, please wait.</string>
    <string name="net_error">Network error, please check.</string>
    <string name="no_update">Congratulations, now you are using the latest application.</string>
    <string name="congratulations">Congratulations</string>
    <string name="again_please">Sorry, please try again!</string>
    <string name="unknow_error">Unknown Error</string>
    <string name="open_source_license">Open Source License</string>
    <string name="tag_license">Excellent projects can not be separated from the support of open source projects, thank you!</string>
    <string name="update_log">Update Log</string>
    <string name="update_log_info">Please Change Your System Language To Chinese To Read This Message!</string>
    <string name="update_log_tag">Latest Update Content</string>
    <string name="utopiaxc">UtopiaXC</string>
    <string name="user">User</string>
    <string name="vpn_message">VPN Account</string>
    <string name="urp_user">URP Account</string>
    <string name="urp_message">URP Account</string>
    <string name="vpn_account">VPN Account</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="test">Test Config</string>
    <string name="warning">Warning!</string>
    <string name="warning_message">Please make sure you are under School network or you have already under the environment to open your school\'s URP system.(It will take a little longer)</string>
    <string name="start">Start</string>
    <string name="testing">Testing</string>
    <string name="configured">(Configured)</string>
    <string name="config_useful">Config is useful</string>
    <string name="config_useless">Config is fail to connect to your URP account.Please make sure you are under the school-network available environment and make sure your username and password are correct.</string>
    <string name="address_alert">Please enter the address completely,it should content\"http://\" or \"https://\"</string>
    <string name="table_alert">Please choose a way how to show the timetable\n(you can change it in settings later)</string>
    <string name="timetable_chart">Weekly Two-dimensional chart</string>
    <string name="timetable_list">Daily List</string>
    <string name="timetable_all_course_list">Whole list of course(Not recommended)</string>
    <string name="theme">Theme</string>
    <string name="timetable_layout">Layout of timetable</string>
    <string name="white">White(Not recommended)</string>
    <string name="black">Black</string>
    <string name="green">Green</string>
    <string name="yellow">Yellow</string>
    <string name="blue">Blue</string>
    <string name="pink">Pink</string>
    <string name="grey">Grey</string>
    <string name="purple">Purple(Default)</string>
    <string name="red">Red</string>
    <string name="grade_list">Grade List</string>
    <string name="credit">Credit:</string>
    <string name="grade">Grade:</string>
    <string name="attribute">Attribute:</string>
    <string name="first_get_grades">Please Pull down to refresh at first time.</string>
    <string name="refresh_successful">Refresh Successful</string>
    <string name="refresh_failed">Refresh Failed,Please make sure your net work and account is Correct!</string>
    <string name="set_first_start_page">page of start</string>
    <string name="error">Error</string>
    <string name="fail_to_get_timetable">Fail to get timetable message!</string>
    <string name="getting_timetable">Getting Timetable</string>
    <string name="no_timetable_sql">No database</string>
    <string name="get_timetable_sql">Get timetable database now?</string>
    <string name="later">Later</string>
    <string name="alert">Alert</string>
    <string name="refresh_timetable">Refresh timetable</string>
    <string name="change_week">Change Display Week</string>
    <string name="set_start_week">Set start of weeks</string>
    <string name="frount_week">Frount Week</string>
    <string name="next_week">Next Week</string>
    <string name="back_to_now">Back To Now</string>
    <string name="course_name">Course Name:</string>
    <string name="course_id">Course ID:</string>
    <string name="course_attribute">Course Attribute:</string>
    <string name="exam_attribute">Exam Attribute:</string>
    <string name="weeks">Weeks:</string>
    <string name="course_time">Course Time:</string>
    <string name="teacher">Teacher:</string>
    <string name="school">School:</string>
    <string name="room">Room:</string>
    <string name="edit">Edit</string>
    <string name="exam_message">Exam Messages</string>
    <string name="hint_weeks">Please use "," to divide numbers!</string>
    <string name="hint_time">Please use "~" to input</string>
    <string name="count_of_course">Course Count:</string>
    <string name="alert_time">Please enter a number at max 12 and min 1</string>
    <string name="hint_default_unknown">Default UnKnown(Optional)</string>
    <string name="unknown">UnKnown</string>
    <string name="delete">Delete</string>
    <string name="editor_error">The Week or Count Message You Inputted Error,Other Modify Saved</string>
    <string name="blank_error">You Have a Required Field Unfilled</string>
    <string name="week_error">Week Message You Inputted Error</string>
    <string name="count_error">Count Message You Inputted Error</string>
    <string name="week_fast_change">Show/Hide Fast Change Tool</string>
    <string name="exam_location">Exam Location:</string>
    <string name="exam_time">Exam Time:</string>
    <string name="week_day">Week:</string>
    <string name="course_editor">Course Editor</string>
    <string name="start_time">Start Time:</string>
    <string name="end_time">End Time:</string>
    <string name="click_to_choose">Click To Choose</string>
    <string name="must_to_fill">(Must To Fill)</string>
    <string name="starter">Start:</string>
    <string name="ender">End:</string>
    <string name="please_to_choose_week">Please To Choose Week Day</string>
    <string name="selected_week">Selected Week Day:</string>
    <string name="add_time_error">Ending Time Should\'t Be Earlier Than Starting Ones</string>
    <string name="display_or_hide_course">Display/Hide Inactive Course</string>
    <string name="starting_helper">Sorry,your language is not supported.You should change your system language into Chinese
    and Click Center->Helper And Solution to read.</string>
    <string name="helper_and_solution">Helper And Solution</string>
    <string name="tag_helper_and_solution">Please get this in Chinese</string>
    <string name="sync_all">Sync All From School</string>
    <string name="syncing">Syncing</string>
    <string name="all_successful">All Information Is Got！</string>
    <string name="course_got_error">Courses Did Not Got!\n</string>
    <string name="exam_got_error">Exam Information Did Not Got!\n</string>
    <string name="grade_got_error">Grades Did Not Got!\n</string>
    <string name="get_all_warning_message">If Successful,All The Information You Corrected Yourself Will Be Lost!\n
    Please Sync Under School NetWork Or Using VPN!</string>
    <string name="label_network">School Network</string>
    <string name="success">Success</string>
    <string name="success_get_timetable">Successfully get timetable, Please set the first week at settings first.</string>
    <string name="vpn_not_set">Your vpn account not set!</string>
    <string name="net_user_is_correct">Sorry,your network account or vpn account is not correct!</string>
    <string name="net_user_not_correct">Success!Your network account have set.</string>
    <string name="net_user_settings_title">Please input your network account</string>
    <string name="check_network_account">Checking your account</string>
    <string name="checking">Checking</string>
    <string name="logout_network">Logout Account</string>
    <string name="refresh">Refresh</string>
    <string name="getting">Getting</string>
    <string name="getting_netmessage">Getting Network Messages</string>
    <string name="confirm_logout_network">Confirm to logout network?</string>
    <string name="account_message">Account Message</string>
    <string name="balance">Balance</string>
    <string name="used_time">Used Time</string>
    <string name="used_band">Network traffic</string>
    <string name="overdate">Overdate</string>
    <string name="online">Online Statue</string>
    <string name="network_set">Network Set</string>
    <string name="network_statue">Network Statue</string>

    <string name="fail_change_set">Fail to change network set</string>
    <string name="succeed_change_set">Successfully changing network set</string>
    <string name="fail_make_offline">Fail to request api!</string>
    <string name="succeed_make_offline">Request API successfully</string>
    <string name="please_wait">Please Wait</string>
    <string name="submitting_set">Submit your set book</string>
    <string name="book_set">Book next month\'s set</string>
    <string name="correct">Change</string>
    <string name="set_your_book">The set you have booked</string>
    <string name="cannot_check_set">Cannot get the set you have booked</string>
    <string name="fail">Fail</string>
    <string name="try_again">Try again</string>
    <string name="donot_try_again">Back</string>
    <string name="fail_to_get_network_messages">Fail To Get Getwork Messages</string>
    <string name="confirm_stop_net">Confirm to stop network</string>
    <string name="doing_stop_net">Doing Stop Network</string>
    <string name="doing_reopen">Doing reopen</string>
    <string name="confirm_to_reopen">Confirm to reopen network</string>
    <string name="click_to_stop">-click to stop network</string>
    <string name="click_to_bookset">-click to book set</string>
    <string name="checking_book_statue">Checking book statue</string>
    <string name="doing_ogffine">Doing Offline</string>
    <string name="offline_all_device">Make all device offline</string>
    <string name="click_to_offline_all">-click to offline</string>
    <string name="no_device">No online device</string>
    <string name="executing">Executing</string>
    <string name="interrupt">Interrupt</string>
    <string name="please_use_check">Please Use Account Check To Get Available Messages</string>

</resources>
