<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="ExtraText">

    <item
    android:id="@+id/fragment_timetable_refresh"
    android:orderInCategory="100"
    android:title="@string/refresh_timetable"
    app:showAsAction="never" />

    <item
        android:id="@+id/fragment_timetable_change_week"
        android:orderInCategory="100"
        android:title="@string/change_week"
        app:showAsAction="never" />

    <item
        android:id="@+id/fragment_timetable_start_week"
        android:orderInCategory="100"
        android:title="@string/set_start_week"
        app:showAsAction="never" />

    <item
        android:id="@+id/fragment_timetable_show_all"
        android:orderInCategory="100"
        android:title="@string/display_or_hide_course"
        app:showAsAction="never" />

    <item
        android:id="@+id/fragment_timetable_fast_change"
        android:orderInCategory="100"
        android:title="@string/week_fast_change"
        app:showAsAction="never" />



</menu>