<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView_table_alert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/table_alert"
        android:textSize="20sp"
        android:layout_marginTop="150dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:textAlignment="center"
        />

    <com.dd.processbutton.FlatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/timetable_chart"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:id="@+id/button_chart"
        android:textColor="@android:color/white"
        app:pb_colorNormal="@color/colorPrimary"
        app:pb_colorPressed="@color/colorPrimaryDark"/>

    <com.dd.processbutton.FlatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/timetable_all_course_list"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:id="@+id/button_all"
        android:textColor="@android:color/white"
        app:pb_colorNormal="@color/colorPrimary"
        app:pb_colorPressed="@color/colorPrimaryDark"/>


</LinearLayout>